--- a/src/content-yaml/experience.yaml
+++ b/src/content-yaml/experience.yaml
@@ -5,7 +5,7 @@ list:
     -
         title: 制作人
         subtitle: 念力云游戏
-        subtitleDetail: ' - 家门口的云游戏StartUp'
+        subtitleDetail: ' - 云游戏StartUp'
         date: '2021.05 - 2022.1'
         tags:
             - 原型迭代
@@ -17,7 +17,7 @@ list:
             - 产品《云原生游戏项目》，为保护公司商业博弈，暂时保密
             - 在项目中自己撰写了第一版设计案，并制作了第一版AIController+状态机（混合行为树）
             - 在项目中亲自制作了第一版AIController+状态机（混合行为树）
-            - 离开原因：公司不做游戏了
+            - 离开原因：公司转向，不做游戏了
     -
         title: 制作人
         subtitle: 北京开天创世科技有限公司
@@ -34,7 +34,7 @@ list:
             - 产品《光与暗童话》，为满足用户群体的需求，做了大量核心机制创新
             - 自己下场制作了技能编辑工具，并主导了AI行为树的设计与制作
             - 玩法、画风测试当中玩家反馈较好
-            - 离开原因：商业思路说服失败
+            - 离开原因：公司产品策略与发行伙伴的宣发策略不一致，止步于内测
     -
         title: 创始人
         subtitle: 北京双曲互动科技有限公司
