数值202310修改for点点

--- a/src/content-yaml/sidebar.yaml
+++ b/src/content-yaml/sidebar.yaml
@@ -1,6 +1,6 @@
 name:
     title:
-        - 12年工作经验
+        - 15年工作经验
     name: '宋 甫'
 contact:
     email:
@@ -36,5 +36,5 @@ interests:
             name: 代码
             description: 喜欢自己写代码、写工具。(此简历使用ReactJS制作)
         -
-            name: 游戏商业
-            description: 作为一个金融背景的游戏人，我始终对于游戏商业形态充满兴趣；游戏已经引领了商业革命，我相信也将创造新的商业潮流
+            name: 商业化
+            description: 作为一个金融背景的游戏人，我始终对于产品商业形态充满兴趣；游戏已经引领了商业革命，我相信也将创造新的商业潮流
