--- a/src/content-yaml/experience.yaml
+++ b/src/content-yaml/experience.yaml
@@ -3,6 +3,30 @@ icon: null
 description: null
 list:
     -
+        title: 策划兼程序
+        subtitle: 二人工作室Hyperbola Games
+        subtitleDetail: '迷你工作室'
+        date: '2023.05 - Now'
+        tags:
+            - 游戏设计
+            - 工程开发
+        description:
+            - 我们看好虚幻对元宇宙的思考，对他们给出的答案-UEFN十分认同。决定小组自费研发《Inside Us》。
+            - 工作室仅有2人，在项目中，宋甫负责产品设计、数值平衡与编程，尝试做减法，单纯的做专业的事。
+            - 第一版开发完成，但手续审核遇到黑天鹅。
+    -
+        title: 制作人
+        subtitle: 西南偏南（北京）科技有限公司
+        subtitleDetail: ' - 接受社交行业投资'
+        date: '2022.01 - 2023.4'
+        tags:
+            - 游戏设计
+            - 团队管理
+            - 工程开发
+        description:
+            - 管理8人团队
+            - 开发游戏语聊app《修勾夜店手机App》，两次上线，产品很吸量，但用户年龄段影响了留存。
+    -
         title: 制作人
         subtitle: 念力云游戏
         subtitleDetail: ' - 云游戏StartUp'
@@ -14,14 +38,13 @@ list:
             - 工程开发
         description:
             - 管理11人团队
-            - 产品《云原生游戏项目》，为保护公司商业博弈，暂时保密
-            - 在项目中自己撰写了第一版设计案，并制作了第一版AIController+状态机（混合行为树）
-            - 在项目中亲自制作了第一版AIController+状态机（混合行为树）
-            - 离开原因：公司转向，不做游戏了
+            - 找到云游戏的长期核心价值，在技术尚不成熟的情况下找到产品突破口，立项《云原生游戏项目》
+            - 在项目中自己撰写了第一版设计案,自己制作了第一版AIController+状态机（混合行为树）
+            - 离开原因：公司被资本大潮裹挟，不做游戏了
     -
         title: 制作人
         subtitle: 北京开天创世科技有限公司
-        subtitleDetail: ' - 家门口的中型游戏开发商'
+        subtitleDetail: ' - 中型游戏开发商'
         date: '2020.05 - 2021.5'
         tags:
             - 团队管理
@@ -31,10 +54,9 @@ list:
         description:
             - 管理32人团队
             - 研究商业策略，找到价值洼地用户群体，并组建、带领团队开发出满足用户需求的产品
-            - 产品《光与暗童话》，为满足用户群体的需求，做了大量核心机制创新
-            - 自己下场制作了技能编辑工具，并主导了AI行为树的设计与制作
+            - 产品《勒是地下城》，为满足用户群体的需求，做了大量核心机制创新
             - 玩法、画风测试当中玩家反馈较好
-            - 离开原因：公司产品策略与发行伙伴的宣发策略不一致，止步于内测
+            - 离开原因：公司产品策略与发行伙伴的宣发策略冲突较多，只能收缩项目
     -
         title: 创始人
         subtitle: 北京双曲互动科技有限公司
