--- a/src/content-yaml/projects.yaml
+++ b/src/content-yaml/projects.yaml
@@ -3,25 +3,50 @@ icon: archive
 description: null
 list:
     -
+        title: 《Inside Us》
+        subtitle: UEFN平台的非对称射击岛屿
+        tags:
+            - 第三人称射击
+            - 泛元宇宙
+        description:
+            - 玩家有两个阵营，人类和感染者。每局7个回合，回合开始时随机产生感染者，并可感染其他人。感染他人和保持不受感染都可得分。7回合完积分最高者为最终胜利者。工程方面做了大量的hack，这也是当前众多UEFN工程的共同现状。
+            - 宋甫在其中负责产品设计、编程。小伙伴负责美术和市场。
+            - 上架资格审核遭遇黑天鹅。
+    -
+        title: 《修勾夜店手机App》
+        subtitle: 3D蹦迪+语聊商业化app
+        tags:
+            - 语音聊天
+            - 社交游戏
+            - 泛元宇宙
+        description:
+            - 我们不是B站《修勾夜店》直播间的创作者，但我们是第一个把它带到手机、做完整app化、商业化的团队。
+            - 商业模型上，主要把云蹦迪的用户转化到语音聊天室之中，借由恋爱吸引力、主播模式挣钱。
+            - 上线两次，数据不够好。资金不足以继续深挖商业模型。元宇宙项目也普遍遇到了这个问题，何时解决无法确定，及时止损。
+    -
         title: 《云原生游戏项目》
-        subtitle: 出于保护公司商业博弈的考虑，暂时保密
+        subtitle: 手机级传感器+服务器级算力带来全新体验
         tags:
             - 新技术
             - 创新赛道
         description:
             - 云原生游戏是指其体验必须依赖云游戏的连接模式才能成立的游戏。
             - 项目经过深度的思考，带来手机和PC都无法带来的体验，并且深度结合云游戏的调度技术。
+            - 手机的传感器比PC、服务器多一个量级，可以低成本采集表情、空间位置、声音。服务器级的渲染算力让纤毫毕现、生动的角色头部得到表现。
+            - 由于公司受到元宇宙资本市场的影响，不做游戏了，项目解散。
     -
-        title: 《光与暗童话》
-        subtitle: 真正适合手机的Platformer游戏
+        title: 《勒是地下城》
+        subtitle: 真正适合手机、现代商业化的Platformer
         tags:
-            - 商业游戏
-            - 创新赛道
+            - 商业化
+            - Platformer
         description:
-            - '<光与暗童话>可能是首款真正适合手机的Platformer游戏。有简化的操作、成熟的商业化体系。'
+            - 可能是首款真正适合手机的Platformer游戏。有简化的操作、成熟的商业化体系。
             - Platformer游戏长久以来在主机、Steam上深受欢迎；但手机上的同类产品往往操作异常复杂，或者商业化较差。
             - 为压缩开发时间的同时充分进行核心玩法迭代，项目的项目管理较为复杂。当前开发了1日游戏内容，尚未未接入付费系统。
-            - 宋甫负责此项目的商业策略、团队管理、项目管理、部分游戏设计、部分代码开发，以及剧情、美术方向的制定。项目组32人，预算1000-1500万。
+            - 宋甫负责此项目的商业策略、团队管理、项目管理、产品与美术方向。
+            - 由于这是个人首次任职制作人，投注的热情极大。自己写了一部分代码，做了一些工具；也自己写了部分策划文档。
+            - 公司在此游戏上有决心和野心，但发行商无法适应这样的产品，沟通和运作成本极高。发行、推广非常拧巴，影响数据。最终缩减，转为小组维护。
     -
         title: “繁星”解决方案
         subtitle: 社区共建网络游戏平台
@@ -67,7 +92,7 @@ list:
             - 《泉水指挥官》社交模式类似MOBA，队友间可实时共同构建理想的阵型。通过团队协作共同对抗外敌，玩家得到更强的归属感、团队荣誉感，同时也降低了对战的压力。
             - 《泉水指挥官》的布阵玩法灵感来源于”战三国“魔兽地图，核心玩法是布阵，并在每一回合观看英雄们的自动战斗。类似后来的”自走棋“，但没有共享卡池、连携buff，多了组队。
             - '《泉水指挥官》使用Unreal制作，并使用了分布式服务器制作。使用cpp+蓝图编写了动画状态机/Gameplay ability系统/RPC/Dedicated Server/GC FSM状态机等模块。'
-            - 宋甫负责此项目的团队管理、游戏设计、部分代码编写。此游戏由于版号原因未发行。
+            - 宋甫负责此项目的团队管理、游戏设计、部分代码编写。此游戏由于版号原因夭折。
     -
         title: 《漫威：超级争霸战》
         subtitle: 卡牌+3D格斗手机游戏
